# ImageGrayScaleViewer

./: CMakeLists.txt
ImageGrayScaleViewer/: CMakeLists.txt  ImageGrayScaleViewer.py
